[gd_scene load_steps=11 format=2]

[ext_resource path="res://main_screen/cn_bg.png" type="Texture" id=1]
[ext_resource path="res://main_screen/terminus.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://main_screen/UI.gd" type="Script" id=3]
[ext_resource path="res://main_screen/PanelText.tscn" type="PackedScene" id=4]
[ext_resource path="res://main_screen/PanelNewgame.tscn" type="PackedScene" id=5]
[ext_resource path="res://main_screen/BtnMainMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://main_screen/theme.tres" type="Theme" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=3]
size = 18
use_filter = true
font_data = ExtResource( 2 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AppLogo" type="Label" parent="."]
anchor_left = 0.125
anchor_top = 0.0697222
anchor_right = 0.5621
anchor_bottom = 0.180278
margin_top = -0.200005
margin_right = 0.511963
margin_bottom = 0.199997
custom_fonts/font = SubResource( 1 )
text = "Cataclysm Nine"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Menu" type="GridContainer" parent="."]
anchor_left = 0.125
anchor_top = 0.222222
anchor_right = 0.24975
anchor_bottom = 0.847667
margin_right = 0.32
margin_bottom = -0.32
grow_horizontal = 0
grow_vertical = 0
custom_constants/vseparation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MOTD" parent="Menu" instance=ExtResource( 6 )]
margin_right = 160.0
margin_bottom = 47.0
text = "MOTD"

[node name="NewGame" parent="Menu" instance=ExtResource( 6 )]
margin_top = 57.0
margin_right = 160.0
margin_bottom = 104.0
text = "NG"

[node name="Load" parent="Menu" instance=ExtResource( 6 )]
margin_top = 114.0
margin_right = 160.0
margin_bottom = 161.0
text = "LD"

[node name="World" parent="Menu" instance=ExtResource( 6 )]
margin_top = 171.0
margin_right = 160.0
margin_bottom = 218.0
text = "WL"

[node name="Settings" parent="Menu" instance=ExtResource( 6 )]
margin_top = 228.0
margin_right = 160.0
margin_bottom = 275.0
text = "STT"

[node name="Help" parent="Menu" instance=ExtResource( 6 )]
margin_top = 285.0
margin_right = 160.0
margin_bottom = 332.0
text = "HLP"

[node name="Credits" parent="Menu" instance=ExtResource( 6 )]
margin_top = 342.0
margin_right = 160.0
margin_bottom = 389.0
text = "CD"

[node name="Quit" parent="Menu" instance=ExtResource( 6 )]
margin_top = 399.0
margin_right = 160.0
margin_bottom = 446.0
text = "QT"

[node name="PanelContainer" type="Panel" parent="."]
anchor_left = 0.312
anchor_top = 0.221889
anchor_right = 0.875
anchor_bottom = 0.848889
margin_left = 0.511993
margin_top = 0.199997
margin_right = -6.10352e-05
rect_min_size = Vector2( 480, 360 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PanelText" parent="PanelContainer" instance=ExtResource( 4 )]

[node name="PanelNewgame" parent="PanelContainer" instance=ExtResource( 5 )]
visible = false

[node name="Tips" type="RichTextLabel" parent="."]
anchor_left = 0.125
anchor_top = 0.889222
anchor_right = 0.875469
anchor_bottom = 0.944222
margin_top = -0.240051
margin_right = -0.600098
margin_bottom = 0.159973
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]So I'll say \"Hello\", again \"Hello, what is there to be done?\" [/center]"
text = "So I'll say \"Hello\", again \"Hello, what is there to be done?\" "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="focus_entered" from="Menu/MOTD" to="." method="switch_panel" binds= [ "motd" ]]
[connection signal="focus_entered" from="Menu/NewGame" to="." method="switch_panel" binds= [ "newgame" ]]
[connection signal="focus_entered" from="Menu/Load" to="." method="switch_panel" binds= [ "loadgame" ]]
[connection signal="focus_entered" from="Menu/World" to="." method="switch_panel" binds= [ "world" ]]
[connection signal="focus_entered" from="Menu/Settings" to="." method="switch_panel" binds= [ "settings" ]]
[connection signal="focus_entered" from="Menu/Help" to="." method="switch_panel" binds= [ "help" ]]
[connection signal="focus_entered" from="Menu/Credits" to="." method="switch_panel" binds= [ "credits" ]]
[connection signal="button_up" from="Menu/Quit" to="." method="_on_Quit_button_up"]
[connection signal="focus_entered" from="Menu/Quit" to="." method="switch_panel" binds= [ "quit" ]]
